修复管理增删改查