@@ -1,10 +1,13 @@
 package com.touhouqing.grabteacherbackend.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.touhouqing.grabteacherbackend.entity.Student;
 import com.touhouqing.grabteacherbackend.entity.Teacher;
 import com.touhouqing.grabteacherbackend.entity.User;
+import com.touhouqing.grabteacherbackend.dto.StudentInfoRequest;
+import com.touhouqing.grabteacherbackend.dto.TeacherInfoRequest;
 import com.touhouqing.grabteacherbackend.mapper.StudentMapper;
 import com.touhouqing.grabteacherbackend.mapper.TeacherMapper;
 import com.touhouqing.grabteacherbackend.mapper.UserMapper;
@@ -14,10 +17,13 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
-
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import java.time.LocalDateTime;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
+import java.util.List;
+import java.util.Arrays;
 
 @Slf4j
 @Service
@@ -27,6 +33,8 @@ public class AdminServiceImpl implements AdminService {
     private final UserMapper userMapper;
     private final StudentMapper studentMapper;
     private final TeacherMapper teacherMapper;
+    @Autowired
+    private PasswordEncoder passwordEncoder;
 
     /**
      * 获取系统统计信息
@@ -103,7 +111,7 @@ public class AdminServiceImpl implements AdminService {
             throw new RuntimeException("用户不存在");
         }
 
-        if (!List.of("active", "inactive", "banned").contains(status)) {
+        if (!Arrays.asList("active", "inactive", "banned").contains(status)) {
             throw new RuntimeException("无效的状态值");
         }
 
@@ -111,5 +119,199 @@ public class AdminServiceImpl implements AdminService {
         userMapper.updateById(user);
 
         log.info("更新用户状态成功: userId={}, status={}", userId, status);
+    }
+
+    // ===================== 学生管理实现 =====================
+
+    @Override
+    public Page<Student> getStudentList(int page, int size, String keyword, String gradeLevel) {
+        Page<Student> pageParam = new Page<>(page, size);
+        QueryWrapper<Student> queryWrapper = new QueryWrapper<>();
+        
+        // 搜索条件
+        if (StringUtils.hasText(keyword)) {
+            queryWrapper.like("real_name", keyword);
+        }
+        if (StringUtils.hasText(gradeLevel)) {
+            queryWrapper.eq("grade_level", gradeLevel);
+        }
+        
+        // 排序
+        queryWrapper.orderByDesc("id");
+        
+        return studentMapper.selectPage(pageParam, queryWrapper);
+    }
+
+    @Override
+    public Student getStudentById(Long studentId) {
+        return studentMapper.selectById(studentId);
+    }
+
+    @Override
+    @Transactional
+    public Student addStudent(StudentInfoRequest request) {
+        // 只创建学生信息，不创建用户（管理员直接创建学生档案）
+        Student student = Student.builder()
+                .userId(null) // 管理员创建的学生可能没有关联用户
+                .realName(request.getRealName())
+                .gradeLevel(request.getGradeLevel())
+                .subjectsInterested(request.getSubjectsInterested())
+                .learningGoals(request.getLearningGoals())
+                .preferredTeachingStyle(request.getPreferredTeachingStyle())
+                .budgetRange(request.getBudgetRange())
+                .build();
+
+        studentMapper.insert(student);
+        return student;
+    }
+
+    @Override
+    @Transactional
+    public Student updateStudent(Long studentId, StudentInfoRequest request) {
+        Student student = studentMapper.selectById(studentId);
+        if (student == null) {
+            throw new RuntimeException("学生不存在");
+        }
+
+        // 更新学生信息
+        student.setRealName(request.getRealName());
+        student.setGradeLevel(request.getGradeLevel());
+        student.setSubjectsInterested(request.getSubjectsInterested());
+        student.setLearningGoals(request.getLearningGoals());
+        student.setPreferredTeachingStyle(request.getPreferredTeachingStyle());
+        student.setBudgetRange(request.getBudgetRange());
+
+        studentMapper.updateById(student);
+        return student;
+    }
+
+    @Override
+    @Transactional
+    public void deleteStudent(Long studentId) {
+        Student student = studentMapper.selectById(studentId);
+        if (student == null) {
+            throw new RuntimeException("学生不存在");
+        }
+
+        // 逻辑删除学生
+        student.setIsDeleted(true);
+        student.setDeletedAt(LocalDateTime.now());
+        studentMapper.updateById(student);
+
+        // 如果有关联用户，同时逻辑删除对应的用户
+        if (student.getUserId() != null) {
+            User user = userMapper.selectById(student.getUserId());
+            if (user != null) {
+                user.setIsDeleted(true);
+                user.setDeletedAt(LocalDateTime.now());
+                userMapper.updateById(user);
+            }
+        }
+    }
+
+    // ===================== 教师管理实现 =====================
+
+    @Override
+    public Page<Teacher> getTeacherList(int page, int size, String keyword, String subject, Boolean isVerified) {
+        Page<Teacher> pageParam = new Page<>(page, size);
+        QueryWrapper<Teacher> queryWrapper = new QueryWrapper<>();
+        
+        // 搜索条件
+        if (StringUtils.hasText(keyword)) {
+            queryWrapper.like("real_name", keyword);
+        }
+        if (StringUtils.hasText(subject)) {
+            queryWrapper.like("subjects", subject);
+        }
+        if (isVerified != null) {
+            queryWrapper.eq("is_verified", isVerified);
+        }
+        
+        // 排序
+        queryWrapper.orderByDesc("id");
+        
+        return teacherMapper.selectPage(pageParam, queryWrapper);
+    }
+
+    @Override
+    public Teacher getTeacherById(Long teacherId) {
+        return teacherMapper.selectById(teacherId);
+    }
+
+    @Override
+    @Transactional
+    public Teacher addTeacher(TeacherInfoRequest request) {
+        // 只创建教师信息，不创建用户（管理员直接创建教师档案）
+        Teacher teacher = Teacher.builder()
+                .userId(null) // 管理员创建的教师可能没有关联用户
+                .realName(request.getRealName())
+                .educationBackground(request.getEducationBackground())
+                .teachingExperience(request.getTeachingExperience())
+                .specialties(request.getSpecialties())
+                .subjects(request.getSubjects())
+                .hourlyRate(request.getHourlyRate())
+                .introduction(request.getIntroduction())
+                .videoIntroUrl(request.getVideoIntroUrl())
+                .build();
+
+        teacherMapper.insert(teacher);
+        return teacher;
+    }
+
+    @Override
+    @Transactional
+    public Teacher updateTeacher(Long teacherId, TeacherInfoRequest request) {
+        Teacher teacher = teacherMapper.selectById(teacherId);
+        if (teacher == null) {
+            throw new RuntimeException("教师不存在");
+        }
+
+        // 更新教师信息
+        teacher.setRealName(request.getRealName());
+        teacher.setEducationBackground(request.getEducationBackground());
+        teacher.setTeachingExperience(request.getTeachingExperience());
+        teacher.setSpecialties(request.getSpecialties());
+        teacher.setSubjects(request.getSubjects());
+        teacher.setHourlyRate(request.getHourlyRate());
+        teacher.setIntroduction(request.getIntroduction());
+        teacher.setVideoIntroUrl(request.getVideoIntroUrl());
+
+        teacherMapper.updateById(teacher);
+        return teacher;
+    }
+
+    @Override
+    @Transactional
+    public void deleteTeacher(Long teacherId) {
+        Teacher teacher = teacherMapper.selectById(teacherId);
+        if (teacher == null) {
+            throw new RuntimeException("教师不存在");
+        }
+
+        // 逻辑删除教师
+        teacher.setIsDeleted(true);
+        teacher.setDeletedAt(LocalDateTime.now());
+        teacherMapper.updateById(teacher);
+
+        // 如果有关联用户，同时逻辑删除对应的用户
+        if (teacher.getUserId() != null) {
+            User user = userMapper.selectById(teacher.getUserId());
+            if (user != null) {
+                user.setIsDeleted(true);
+                user.setDeletedAt(LocalDateTime.now());
+                userMapper.updateById(user);
+            }
+        }
+    }
+
+    @Override
+    public void verifyTeacher(Long teacherId, Boolean isVerified) {
+        Teacher teacher = teacherMapper.selectById(teacherId);
+        if (teacher == null) {
+            throw new RuntimeException("教师不存在");
+        }
+
+        teacher.setIsVerified(isVerified);
+        teacherMapper.updateById(teacher);
     }
 }
